--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HSEDC2016-Nastusha150698UI</title>
     <link rel="stylesheet" href="stylesheets/style.css">
   </head>
-  <body>
+  <body class="compact">
     <nav class="menubar">
       <div class="userMenu">
         <ul>
@@ -20,11 +20,11 @@
 
     <nav class="sidebar">
     <ul class="sidebarMenu">
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem apple">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -32,11 +32,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem behance">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -44,11 +44,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem facebook">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -56,11 +56,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem soundcloud">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -68,11 +68,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem youtube">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -80,11 +80,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem tumblr">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -92,11 +92,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem telegram">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -104,11 +104,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem twitter">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -116,11 +116,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem vine">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
@@ -128,11 +128,11 @@
         </ul>
 
       </li>
-      <li class="sidebarMenuItem">
+      <li class="sidebarMenuItem windows">
         <div>Menu item</div>
 
         <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
