--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>HSEDC2016-Nastusha150698UI</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <script src="javascripts/jquery.js" charset="utf-8"></script>
+    <script src="javascripts/changemode.js" charset="utf-8"></script>
   </head>
   <body class="compact">
     <nav class="menubar">
@@ -23,123 +25,137 @@
       <li class="sidebarMenuItem apple">
         <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Menu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-        </ul>
+        <nav class="sidebarSubmenu">
+          <ul>
+            <li class="sidebarSubmenuItem">Menu item</li>
+            <li class="sidebarSubmenuItem">Submenu item</li>
+            <li class="sidebarSubmenuItem">Submenu item</li>
+            <li class="sidebarSubmenuItem">Submenu item</li>
+            <li class="sidebarSubmenuItem">Submenu item</li>
+            <li class="sidebarSubmenuItem">Submenu item</li>
+          </ul>
+        </nav>
+
 
       </li>
       <li class="sidebarMenuItem behance">
         <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Menu item</li>
+        <nav class="sidebarSubmenu">
+
+          <ul class="sidebarSubmenuHeader">
+            <li class="sidebarSubmenuItem">Menu item</li>
+          </ul>
+
+
+        <ul>
+          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
         </ul>
+        </nav>
 
       </li>
       <li class="sidebarMenuItem facebook">
         <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
+        <nav class="sidebarSubmenu">
+
+        <ul>
           <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
         </ul>
+        </nav>
 
       </li>
       <li class="sidebarMenuItem soundcloud">
         <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
+        <nav class="sidebarSubmenu">
+
+        <ul>
           <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
         </ul>
+        </nav>
 
       </li>
       <li class="sidebarMenuItem youtube">
         <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
+        <nav class="sidebarSubmenu">
+
+        <ul>
           <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
         </ul>
+        </nav>
 
       </li>
       <li class="sidebarMenuItem tumblr">
         <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
+        <nav class="sidebarSubmenu">
+
+        <ul>
           <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
+          <li class="sidebarSubmenuItem">Submenu item</li>
         </ul>
+        </nav>
 
       </li>
       <li class="sidebarMenuItem telegram">
         <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
+        <nav class="sidebarSubmenu">
+
+        <ul>
           <li class="sidebarSubmenuItem">Menu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
-        </ul>
-
-      </li>
-      <li class="sidebarMenuItem twitter">
-        <div>Menu item</div>
-
-        <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Menu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
           <li class="sidebarSubmenuItem">Submenu item</li>
         </ul>
+        </nav>
 
       </li>
-      <li class="sidebarMenuItem vine">
-        <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Menu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-        </ul>
 
-      </li>
-      <li class="sidebarMenuItem windows">
-        <div>Menu item</div>
 
-        <ul class="sidebarSubmenu">
-          <li class="sidebarSubmenuItem">Menu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-          <li class="sidebarSubmenuItem">Submenu item</li>
-        </ul>
+      <ul class="sidebarModeMenu">
+        <li class="sidebarMenuItem mode">
+          <div>Change mode</div>
+        </li>
+      </ul>
 
-      </li>
+
     </ul>
     </nav>
 
